--- a/style/css/color.css
+++ b/style/css/color.css
@@ -2,6 +2,6 @@
     --bluedark: #26255D;
     --orengedark: linear-gradient(89.83deg, #F2994A -6.21%, #ED6E2D 113.9%);
     --white: #ffffff;
-    --textcolor: #2D3D4D;
+    --textcolor: #3F3D6B;
     --textcolororengebg: #232323;
 }
