--- a/style/css/regular.css
+++ b/style/css/regular.css
@@ -9,7 +9,11 @@ body {
 }
 
 .clr-dark1 {
-    color: var(--orengedark);
+    background: linear-gradient(89.83deg, #F2994A -6.21%, #ED6E2D 113.9%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
 }
 
 .clr-dark2 {
@@ -33,6 +37,12 @@ body {
     font-weight: 300 !important;
     font-size: 24px;
     line-height: 33px;
+}
+
+.headingrand {
+    font-weight: 800;
+    font-size: 48px;
+    line-height: 65px;
 }
 
 
@@ -109,3 +119,45 @@ body {
 
 
 /* section 1 home end */
+
+
+/* section 2 home start  */
+
+.secdiv2 {
+    background-image: url(/img/sec2basket.webp);
+    background-repeat: no-repeat;
+    background-position: center left;
+    background-size: contain;
+    padding: 220px 10px;
+}
+
+
+/* .divc {
+    max-width: 300px;
+} */
+
+.divc img {
+    top: -100px;
+    right: 0;
+    max-width: 500px;
+}
+
+
+/* section 2 home End  */
+
+
+/* section 3home start  */
+
+.secdiv3 {
+    background-color: #FFE8CD;
+    padding: 220px 10px;
+}
+
+.divc2 img {
+    top: -100px;
+    left: 0;
+    max-width: 500px;
+}
+
+
+/* section 3home end  */
