--- a/style/css/tab.css
+++ b/style/css/tab.css
@@ -20,4 +20,10 @@
     .presssecsty {
         margin: 0px 10px 100px 10px;
     }
+    #navbarNav {
+        position: absolute;
+        top: 100px;
+        background-image: var(--orengedark);
+        width: 600px;
+    }
 }
