Ansab Pushes the code after verifiyng

--- a/style/css/mobile.css
+++ b/style/css/mobile.css
@@ -45,4 +45,7 @@
             background-image: var(--orengedark);
             width: 300px;
         }
+        .sectionPadding {
+            padding: 50px 20px;
+        }
     }
