--- a/style/css/regular.css
+++ b/style/css/regular.css
@@ -24,6 +24,16 @@ body {
 }
 
 
+/* spacing */
+
+.gap1 {
+    gap: 30px;
+}
+
+
+/* spacing end  */
+
+
 /*  font size  */
 
 .h1mainhead {
@@ -310,23 +320,27 @@ body {
 /* footer section end  */
 
 
-
 /* Alishba */
 
-.sectionPadding{
+.sectionPadding {
     padding: 50px 70px;
 }
-.bgWhite{
+
+.bgWhite {
     background-color: white;
 }
+
+
 /* SinglePet */
 
 .pet-selectionBox {
     border: 1px solid lightgrey;
     border-radius: 2px;
     transition: .3s;
+    cursor: pointer;
 }
-.pet-selectionBox:hover{
+
+.pet-selectionBox:hover {
     border: 1px solid orange;
 }
 
@@ -346,7 +360,6 @@ body {
 
 
 /* ======FORM======= */
-
 
 .form-lables {
     font-size: 16px;
@@ -378,7 +391,7 @@ body {
 
 .pets {
     background-color: var(--white);
-    padding: 10px 30px;
+    padding: 30px 30px 10px;
     border-radius: 6px;
     display: flex;
     flex-direction: column;
@@ -430,7 +443,8 @@ body {
 .petSelectionForm {
     display: none;
 }
-.activeForm{
+
+.activeForm {
     display: block;
 }
 
@@ -492,38 +506,17 @@ body {
 .Product {
     display: none;
 }
-.active{
+
+.active {
     display: block;
 }
 
 
 /* ================================ */
 
+
 /* BoxBuilding */
 
-.giftBoxImg{
+.giftBoxImg {
     padding: 60px 0;
-}
-
-/* ===========MediaQuery============== */
-
-@media screen and (min-width:320px) and (max-width:768px) {
-    .sectionPadding{
-        padding: 50px 70px;
-    } 
-    .product-card {
-        min-height: 400px !important;
-    }
-}
-
-@media screen and (min-width:413px) and (max-width:463px) {
-    .pet2 {
-        margin-left: 10px;
-    }
-}
-
-@media screen and (min-width:320px) and (max-width:408px) {
-    .pet2 {
-        margin-left: 0px;
-    }
 }
