--- a/style/css/tab.css
+++ b/style/css/tab.css
@@ -27,3 +27,24 @@
         width: 600px;
     }
 }
+
+
+/* ===========MediaQuery Alishba ============== */
+
+@media screen and (min-width:320px) and (max-width:768px) {
+    .product-card {
+        min-height: 400px !important;
+    }
+}
+
+@media screen and (min-width:413px) and (max-width:463px) {
+    .pet2 {
+        margin-left: 10px;
+    }
+}
+
+@media screen and (min-width:320px) and (max-width:408px) {
+    .pet2 {
+        margin-left: 0px;
+    }
+}
