login page done

--- a/style/css/color.css
+++ b/style/css/color.css
@@ -7,4 +7,5 @@
     --formbg:rgb(245, 245, 245);
     --formslabelsclr:rgb(153, 152, 152);
     --inptextclr:rgb(194, 193, 193);
+    --bgLightOrange:#faf2eb;
 }
