--- a/style/css/tab.css
+++ b/style/css/tab.css
@@ -87,3 +87,53 @@
 
 /* ============================================*/
 
+/* CheckoutPage-1 */
+
+@media screen and (min-width:992px) and (max-width:1024px) {
+    .boxTabTitle{
+        font-size:17px;
+    }
+}
+
+@media screen and (min-width:600px) and (max-width:768px) {
+
+    .tabNav{
+        max-width: 33%;
+    }
+    .boxTabTitle{
+        font-size: 28px;
+    }
+}
+
+@media screen and (min-width:320px) and (max-width:768px) {
+    .tabContntMD{
+        text-align: center;
+    }
+    .tabcontntCentrMd{
+        display: flex;
+        justify-content: center !important;
+    }
+}
+
+@media screen and (min-width:320px) and (max-width:400px) {
+    .promoCodeInp::placeholder{
+        font-size: 16px;
+    }
+    .promoCodeInp{
+        font-size: 12px;
+    }
+}
+/* ============================================ */
+
+@media screen and (min-width:320px) and (max-width:480px) {
+    .orderTitle{
+        font-size: 16px;
+    }
+    .weightTitle{
+        font-size: 16px;
+    }
+    .pricing{
+        font-size: 14px;
+    }
+}
+
