--- a/style/css/tab.css
+++ b/style/css/tab.css
@@ -49,7 +49,7 @@
     }
 }
 
-/* ===========MediaQuery============== */
+
 
 @media screen and (min-width:768px) and (max-width:992px) {
     .sectionPadding{
@@ -89,7 +89,19 @@
 
 /* CheckoutPage-1 */
 
+@media screen and (min-width:992px) and (max-width:1600px) {
+    .boxNav{
+        overflow: scroll;
+    }
+    .boxTabTitle{
+        font-size:22px;
+    }
+}
+
 @media screen and (min-width:992px) and (max-width:1024px) {
+    .boxNav{
+        overflow: scroll;
+    }
     .boxTabTitle{
         font-size:17px;
     }
@@ -120,7 +132,7 @@
         font-size: 16px;
     }
     .promoCodeInp{
-        font-size: 12px;
+        font-size: 12px;  
     }
 }
 /* ============================================ */
@@ -136,4 +148,111 @@
         font-size: 14px;
     }
 }
+@media screen and (min-width:320px) and (max-width:767px) {
+    .itemCol{
+        width: 25% !important;
+        /* border: 1px solid !important; */
+    }
+}
 
+@media screen and (min-width:1200px) and (max-width:1360px) {
+    .editProduct-Modal{
+        max-width: 1300px;
+    }
+}
+@media screen and (min-width:768px) and (max-width:992px) {
+    .editProduct-Modal{
+        max-width: 720px !important;
+    }
+    .productBox{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+    }
+    .editProduct-Title{
+        font-size: 30px;
+    }
+}
+@media screen and (min-width:320px) and (max-width:768px) {
+    .editProduct-Modal{
+        max-width: 720px !important;
+    }
+    .sizeItem-col{
+        width: 33%;
+    }
+}
+
+
+
+/* ============================================ */
+
+
+
+/* =========Profile-Page======================== */
+@media screen and (min-width:767px) and (max-width:992px) {
+    .sideBar{
+        width: 300px;
+    }
+    .infoSection{
+        width: 100%;
+        margin-left: 300px;
+    }
+    .profileSpan{
+        font-size: 18px;
+    }
+    .profileName{
+        font-size: 22px;
+    }
+}
+
+@media screen and (min-width:320px) and (max-width:400px) {
+    .profileSpan{
+        font-size: 18px;
+    }
+    .profileName{
+        font-size: 22px;
+    }
+}
+@media screen and (min-width:320px) and (max-width:768px) {
+    .profileSectionPage{
+        display: flex;
+        flex-direction: column;
+    }
+    .infoSection{
+        margin-left: 0px !important;
+        margin-top: 240px;
+    }
+    .sideCol{
+        width: 100%;
+    }
+    .sideBar{
+        padding: 20px;
+        min-height: 10vh;
+        width: 100%;
+    }
+    .navigation{
+        padding: 00px;
+    }
+    .profileNavigationList{
+        display: flex;
+        justify-content: space-evenly;
+        overflow: scroll;
+        width: 100%;
+    }
+    .sideBar{
+        width: 100%;
+    }
+    .sideBar-ancher{
+        color: var(--white);
+        font-size: 18px;
+        font-weight: bolder;
+    }
+    .addresDetail{
+        display: flex;
+        flex-direction: column;
+        /* align-items: center; */
+        justify-content: center;
+        padding: 20px 0;
+    }
+
+}
