--- a/style/css/regular.css
+++ b/style/css/regular.css
@@ -490,7 +490,20 @@ ul{
     min-height: 40px;
     font-size: 18px;
 }
+.amountProgressBar{
+    width: 20%;
+    max-width: 100%;
+    height: 100%; 
+    border-radius: 30px;
+    background: var(--orengedark);
+    position: absolute;
+    top: 0;
+}
 
+.amountProgress{
+    font-size: 14px;
+    font-weight: 600;
+}
 
 /* ============owl-carousel========== */
 
@@ -535,7 +548,10 @@ ul{
     height: 100%; 
     border-radius: 30px;
     background: var(--orengedark);
+    position: absolute;
+    top: 0;
 }
+
 .slider{
     position: relative;
 }
