--- a/style/css/tab.css
+++ b/style/css/tab.css
@@ -261,3 +261,91 @@
     }
 
 }
+
+/* ===============DASHBOARD PAGE============================ */
+
+@media screen and (max-width:1600px) and (min-width:992px){
+    .tapeImg{
+        top: 0px;
+        left: -22px;
+        max-width: 240px;
+    }
+    .pet2{
+        max-width: 150px;
+        bottom:40px;
+        right: 40px;
+    }
+    .petTitle{
+        font-size: 40px;
+    }
+    .OrderRow-flex{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .OrderBox-title{
+        font-size: 20px;
+    }
+    .orderInfo{
+        padding: 10px 0;
+    }
+    .requestBtn{
+        padding: 10px;
+        width: 200px;
+    }
+
+
+}
+
+
+@media screen and (max-width:992px) and (min-width:320px){
+    .orderInfo{
+        align-items: center;
+    }
+    .orders{
+        text-align: center;
+    }
+    .boxBox{
+        display: flex !important;
+        justify-content: center !important;
+        align-items: center !important;
+    }
+    .tapeImg{
+        top: 20px;
+        left: -30px;
+        max-width: 320px;
+    }
+    .petTitle{
+        font-size: 50px;
+    }
+}
+
+@media screen and (max-width:992px) and (min-width:600px){
+    .tapeImg{
+        top: 0px;
+        left: -22px;
+        max-width: 240px;
+    }
+    .pet2{
+        max-width: 180px;
+        bottom:30px;
+        right: 30px;
+    }
+}
+
+@media screen and (max-width:600px) and (min-width:320px){
+    .petTitle{
+        font-size: 30px;
+    }
+    .tapeImg{
+        top: 0px;
+        left: -30px;
+        max-width: 180px;
+    }
+    .pet2{
+        max-width: 100px;
+        bottom: 50px;
+        right: 50px;
+    }
+}
